[package]
name = "mylog"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
edit = "0.1.5"
event-emitter-rs = "0.1.4"
lazy_static = "1.5.0"
minus = { version = "5.6.1", features = ["dynamic_output"] }
serde = "1.0.210"
toml = "0.8.19"

