[package]
name = "mylog"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }
crossterm = "0.28.1"
dirs = "5.0.1"
edit = "0.1.5"
rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.210", features = ["derive"] }
textwrap = "0.16.1"
toml = "0.8.19"
toml_edit = "0.22.24"

